--- a/assignment_ml/task_1.ipynb
+++ b/assignment_ml/task_1.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05a65871",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df[['AveRooms']].values     # feature matrix must be 2D\n",
+    "X = df[['AveRooms']].values\n",
     "y = df['MedHouseVal'].values"
    ]
   },
